@@ -2,6 +2,7 @@ package menu.converter;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import menu.domain.Category;
 import menu.domain.Menu;
 
@@ -14,6 +15,6 @@ public class StringToMenusConverter implements Converter<String, List<Menu>> {
         }
         return Arrays.stream(menuNames)
                 .map(menuName -> Category.findMenu(menuName.trim()))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
